Fix mdx snippet length overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@ pre.mdx-rendered > div {
     font-size: var(--snippet-font-size) !important;
 }
 
+.mdx-snippet > pre {
+    overflow-x: scroll;
+}
+
 pre.mdx-rendered > code {
     display: block !important;
     width: 100% !important;
